--- a/templates/base.html
+++ b/templates/base.html
@@ -38,7 +38,16 @@
           </form>
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container-fluid -->
-    </nav> 
+    </nav>
+    {% with messages = get_flashed_messages() %}
+      {% if messages %}
+        <ul class=flashes>
+        {% for message in messages %}
+          <li>{{ message }}</li>
+        {% endfor %}
+        </ul>
+      {% endif %}
+    {% endwith %}
     {% block content %}
     {% endblock %}
   </body>
