--- a/templates/index.html
+++ b/templates/index.html
@@ -9,5 +9,38 @@ Home
 {% endblock %}
 
 {% block content %}
+  <header>
+    <h1 class="home-title">White Man Dance Catalogue</h1>
+  </header>
+  <section class="">
+    <marquee>Welcome!</marquee>
+  </section>
 
+  <section>
+    <a href="the_moves_to_groove_to.html">
+      <div class="button">
+      <h2>Open The Catalogue<br />NOW!</h2>
+      </div>
+    </a>
+  </section>
+
+  <section>
+    <p>This is your coach:</p>
+    <p>Nick "Boogie-man" Mizesko</p>
+    <img src="/static/img/main_goat.jpg" />
+    <p>
+      Have you ever wanted to be the star of the show?<br />
+      Do you wish you didn't have two left feet?
+    </p>
+    <h1>We can help!</h1>
+    <a href="the_moves_to_groove_to.html">
+      <div class="button">
+      <h2>Open The Catalogue<br />NOW!</h2>
+      </div>
+    </a>
+  </section>
+
+  <footer>
+
+  </footer>
 {% endblock %}
