--- a/templates/base.html
+++ b/templates/base.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <title>{% block title %}{% endblock %}</title>
+    <link rel="stylesheet" href="{{url_for('static', filename='css/normalize.css')}}"/>
     <link rel="stylesheet" href="{{url_for('static', filename='css/the.css')}}"/>
 
     <script type="text/javascript" src="{{url_for('static', filename='vendor/jquery/jquery-2.1.1.min.js')}}"></script>
