--- a/templates/index.html
+++ b/templates/index.html
@@ -17,7 +17,7 @@ Home
   </section>
 
   <section>
-    <a href="the_moves_to_groove_to.html">
+    <a href="/dances">
       <div class="button">
       <h2>Open The Catalogue<br />NOW!</h2>
       </div>
@@ -33,7 +33,7 @@ Home
       Do you wish you didn't have two left feet?
     </p>
     <h1>We can help!</h1>
-    <a href="the_moves_to_groove_to.html">
+    <a href="/dances">
       <div class="button">
       <h2>Open The Catalogue<br />NOW!</h2>
       </div>
