dances header/footer code

--- a/templates/dances.html
+++ b/templates/dances.html
@@ -9,9 +9,18 @@ Dancey Dance
 {% endblock %}
 
 {% block content %}
+<header>
+  <h1>Pick A Dance Move</h1>
+  <img src="/static/img/lawnmower.gif" />
+</header>
+
 <ul>
  {% for dance in dances %}
  <li>{{ dance.name }}</li>
  {% endfor %}</ul>
+
+<footer>
+  <img src="/static/img/ad_viagra.gif" />
+</footer>
 
 {% endblock %}
