Difficulty and hotness

--- a/templates/new_dance.html
+++ b/templates/new_dance.html
@@ -16,6 +16,7 @@ New Dance
     {{ render_field(form.youtube_id) }}
     {{ render_field(form.category) }}
     {{ render_field(form.difficulty) }}
+    {{ render_field(form.hotness) }}
   </dl>
   <p><input type=submit value=Create>
 </form>
