--- a/templates/dances.html
+++ b/templates/dances.html
@@ -18,10 +18,12 @@ All Dances
 <ul>
   {% for dance in dances %}
     <li class="dance_move">
-      <h2>{{ dance.name }}</h2>
-      <img src='{{ "/static/img/dance_thumbnail_%d.gif" % dance.id }}'/>
-      <h3>Category: {{ dance.category }}</h3>
-      <h3>Difficulty: {{ dance.diffulty }}</h3>
+      <a href='{{ "/dance/%d" % dance.id }}'>
+        <h2>{{ dance.name }}</h2>
+        <img src='{{ "/static/img/dance_thumbnail_%d.gif" % dance.id }}'/>
+        <h3>Category: {{ dance.category }}</h3>
+        <h3>Difficulty: {{ dance.diffulty }}</h3>
+      </a>
     </li>
   {% endfor %}
 </ul>
