--- a/templates/categories.html
+++ b/templates/categories.html
@@ -24,16 +24,12 @@ Dance Categories
       </a>
     </li>
  {% endfor %}
-    <li class="dance_move">
-      <a href="/funeral">
-        <h2> Funeral </h2>
-        <img src="/static/img/dance_thumbnail_Funeral.gif"/>
-      </a>
-    </li>
 </ul>
 
 <footer>
-  <img src="/static/img/ad_viagra.gif" />
+  <a href="/gifapalooza">
+    <img src="/static/img/ad_viagra.gif" />
+  </a>
 </footer>
 
 {% endblock %}
