--- a/templates/funeral.html
+++ b/templates/funeral.html
@@ -14,17 +14,12 @@ Sickening
   <img src="/static/img/lawnmower.gif" />
 </header>
 
-<ul>
-    <li class="dance_move">
-        <h2>THANK YOU!!!</h2>
-        <img src="/static/img/dance_thumbnail_1.gif"/>
-    </li>
-</ul>
+<iframe src="https://vine.co/v/OUKgir2tI3i/embed/simple?audio=1" width="600" height="600" frameborder="0"></iframe><script src="https://platform.vine.co/static/scripts/embed.js"></script>
 
 <footer>
   <a href="/gifapalooza">
     <img src="/static/img/ad_viagra.gif" />
-  </A>
+  </a>
 </footer>
 
 {% endblock %}
