--- a/templates/categories.html
+++ b/templates/categories.html
@@ -12,7 +12,7 @@ Dance Categories
 
 <header>
   <h1>Categories</h1>
-  <img src="/static/img/lawnmower.gif" />
+  <img class="mobile" src="/static/img/lawnmower.gif" />
 </header>
 
 <ul>
