--- a/templates/index.html
+++ b/templates/index.html
@@ -19,15 +19,15 @@ Home
   <section>
     <a href="/categories">
       <div class="button">
-      <h2>Open The Catalogue<br />NOW!</h2>
+      <h2>Open The Catalogue <br class="mobile" />NOW!</h2>
       </div>
     </a>
   </section>
 
   <section>
-    <p>This is your coach:</p>
-    <p>Nick "Boogie-man" Mizesko</p>
-    <img src="/static/img/main_goat.jpg" />
+    <p class="desktop-collapse">This is your coach:</p>
+    <p class="desktop-collapse">Nick "Boogie-man" Mizesko</p>
+    <img class="boogie" src="/static/img/main_goat.jpg" />
     <p>
       Have you ever wanted to be the star of the show?<br />
       Do you wish you didn't have two left feet?
