--- a/templates/_render_dances.html
+++ b/templates/_render_dances.html
@@ -5,7 +5,7 @@
       <a href='{{ "/dance/%d" % dance.id }}'>
         <h2>{{ dance.name }}</h2>
         <img src='{{ "/static/img/dance_thumbnail_%d.gif" % dance.id }}'/>
-        <h3>Category: {{ dance.category }}</h3>
+        <!-- <h3>Category: {{ dance.category }}</h3> -->
         <h3>Difficulty:</h3>
           {% for diff in range(dance.difficulty) %}
             <img class="pepper" src="../static/img/travolta_1.png">
