--- a/templates/category.html
+++ b/templates/category.html
@@ -11,7 +11,7 @@ Category {{ name }}
 {% block content %}
 <header>
   <h1>Pick A Dance Move</h1>
-  <img src="/static/img/lawnmower.gif" />
+  <img class="mobile" src="/static/img/lawnmower.gif" />
 </header>
 
 {% from "_render_dances.html" import render_dances %}
