New and improved ad banner

--- a/templates/category.html
+++ b/templates/category.html
@@ -18,7 +18,7 @@ Category {{ name }}
 {{ render_dances(dances) }}
 
 <footer>
-  <img src="/static/img/ad_viagra.gif" />
+  <img src="/static/img/ad.png" />
 </footer>
 
 {% endblock %}
