--- a/templates/gifapalooza.html
+++ b/templates/gifapalooza.html
@@ -22,7 +22,7 @@ THANKS
 </ul>
 
 <footer>
-  <img class="palooza" src="/static/img/ad_viagra.gif" />
+  <img class="palooza" src="/static/img/ad.png" />
 </footer>
 
 <script>
