--- a/templates/categories.html
+++ b/templates/categories.html
@@ -28,7 +28,7 @@ Dance Categories
 
 <footer>
   <a href="/gifapalooza">
-    <img src="/static/img/ad_viagra.gif" />
+    <img src="/static/img/ad.png" />
   </a>
 </footer>
 
