--- a/templates/dances.html
+++ b/templates/dances.html
@@ -18,7 +18,7 @@ All Dances
 {{ render_dances(dances) }}
 
 <footer>
-  <img src="/static/img/ad_viagra.gif" />
+  <img src="/static/img/ad.png" />
 </footer>
 
 {% endblock %}
