--- a/templates/funeral.html
+++ b/templates/funeral.html
@@ -18,7 +18,7 @@ Sickening
 
 <footer>
   <a href="/gifapalooza">
-    <img src="/static/img/ad_viagra.gif" />
+    <img src="/static/img/ad.png" />
   </a>
 </footer>
 
