--- a/templates/index.html
+++ b/templates/index.html
@@ -41,6 +41,6 @@ Home
   </section>
 
   <footer>
-    <img src="/static/img/ad_viagra.gif" />
+    <img src="/static/img/ad.png" />
   </footer>
 {% endblock %}
