--- a/templates/dance.html
+++ b/templates/dance.html
@@ -14,7 +14,7 @@ Dance {{ dance.name }}
 <h2>Difficulty: {{ dance.dificulty }} </h2>
 <ul>
   {% for step in dance.steps %}
-    <li>
+    <li class="vine-container">
       <h3>{{ step.name }}</h3>
     {% autoescape false %}
       {{ step.vine_embedded_html }}
@@ -26,6 +26,6 @@ Dance {{ dance.name }}
 <h2>Put it all together!</h2>
 
 <iframe src="http://www.youtube.com/embed/{{ dance.youtube_id }}"
- width="560" height="315" frameborder="0" allowfullscreen></iframe>
+ width="90%" height="90%" frameborder="0" allowfullscreen></iframe>
 
 {% endblock %}
