--- a/templates/category.html
+++ b/templates/category.html
@@ -18,7 +18,9 @@ Category {{ name }}
 {{ render_dances(dances) }}
 
 <footer>
-  <img src="/static/img/ad.png" />
+  <a href="/gifapalooza">
+    <img src="/static/img/ad.png" />
+  </a>
 </footer>
 
 {% endblock %}
