--- a/templates/gifapalooza.html
+++ b/templates/gifapalooza.html
@@ -10,19 +10,11 @@ THANKS
 
 {% block content %}
 
-<header>
-  <img class="palooza" src="/static/img/lawnmower.gif" />
-</header>
-
-<ul>
-    <li class="dance_move">
-        <h2>THANK YOU!!!</h2>
-        <img class="palooza" src="/static/img/dance_thumbnail_1.gif"/>
-    </li>
-</ul>
+<h2>www.howtodance.website</h2>
+<img class="palooza" src="/static/img/dance_thumbnail_1.gif"/>
 
 <footer>
-  <img class="palooza" src="/static/img/ad.png" />
+  <img src="/static/img/ad.png" />
 </footer>
 
 <script>
