--- a/templates/category.html
+++ b/templates/category.html
@@ -19,7 +19,7 @@ Category {{ name }}
 
 <footer>
   <a href="/gifapalooza">
-    <img src="/static/img/ad.png" />
+    <img src="/static/img/mayo.png" />
   </a>
 </footer>
 
