--- a/templates/gifapalooza.html
+++ b/templates/gifapalooza.html
@@ -14,7 +14,7 @@ THANKS
 <img class="palooza" src="/static/img/dance_thumbnail_15.gif"/>
 
 <footer>
-  <img src="/static/img/ad.png" />
+  <img src="/static/img/mayo.png" />
 </footer>
 
 <script>
